# Comfyui_gemini_tts_node

./: README.md  __init__.py  gemini_tts.py  pyproject.toml
.github/workflows/: publish.yml
